<resources>
    <string name="app_name">My Partner</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="dont_you_have_an_account">Don\'t you have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="new_password">New password</string>
    <string name="home_town">Home Town</string>
    <string name="contact_no">Contact no</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="religion">Religion</string>
    <string name="cast">Cast</string>
    <string name="Height">Height (Feet)</string>
    <string name="other">Other description</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="m">M</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="log_out">Log out</string>
    <string name="my_prof">My profile</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing username
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
